--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,13 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(LLVM REQUIRED CONFIG)
+find_package(LLD REQUIRED CONFIG)
 
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
 include_directories(${LLVM_INCLUDE_DIRS})
+include_directories(${LLD_INCLUDE_DIRS})
 separate_arguments(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
 add_definitions(${LLVM_DEFINITIONS_LIST})
 
@@ -29,4 +31,4 @@ add_executable(${BINARY}_run main.cpp Console.cpp ${AST_SOURCES} ${COMPILER_SOUR
 llvm_map_components_to_libnames(llvm_libs ${LLVM_TARGETS_TO_BUILD} core native)
 
 # Link against LLVM libraries
-target_link_libraries(${BINARY}_run ${llvm_libs})
+target_link_libraries(${BINARY}_run ${llvm_libs} lldCOFF lldCommon lldELF)
