Fixed ErrorTable being duplicated a billion times. Fixed assignment promotion to var declaration inside when expressions. Improved Lexer performance by removing line splitting on initialization. Fixed some lexing errors with string & block comments. Added some basic analysis for more nodes. Added string interning for values needed for the whole compilation process. Fixed issues with source code in error messages displaying incorrectly. Temp; Use i32 type for loop identifier until infer reference resolving is implemented. Added support for else statement to have optional curly brackets. Began refactor of SymbolTable to support function overloads.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,8 +27,21 @@ file(GLOB_RECURSE LEXER_SOURCES LIST_DIRECTORIES true lexer/*.h lexer/*.cpp)
 file(GLOB_RECURSE PARSER_SOURCES LIST_DIRECTORIES true parser/*.h parser/*.cpp)
 file(GLOB_RECURSE ANALYSIS_SOURCES LIST_DIRECTORIES true analysis/*.h analysis/*.cpp)
 file(GLOB_RECURSE CONTEXT_SOURCES LIST_DIRECTORIES true context/*.h context/*.cpp)
+file(GLOB_RECURSE SYMBOL_TABLE_SOURCES LIST_DIRECTORIES true symbolTable/*.h symbolTable/*.cpp)
 
-add_executable(${BINARY}_run main.cpp Console.cpp App.cpp ${AST_SOURCES} ${COMPILER_SOURCES} ${LEXER_SOURCES} ${PARSER_SOURCES} ${ANALYSIS_SOURCES} ${CONTEXT_SOURCES})
+add_executable(
+        ${BINARY}_run
+        main.cpp
+        Console.cpp
+        App.cpp
+        ${AST_SOURCES}
+        ${COMPILER_SOURCES}
+        ${LEXER_SOURCES}
+        ${PARSER_SOURCES}
+        ${ANALYSIS_SOURCES}
+        ${CONTEXT_SOURCES}
+        ${SYMBOL_TABLE_SOURCES}
+)
 #add_library(${BINARY}_lib Console.cpp ${AST_SOURCES} ${COMPILER_SOURCES} ${LEXER_SOURCES} ${PARSER_SOURCES} ${ANALYSIS_SOURCES} ${CONTEXT_SOURCES})
 #add_executable(${BINARY}_run main_network.cpp)
 #add_executable(${BINARY}_run main_log.cpp)
