Reimplemented scopes to hopefully allow for better type narrowing.
feat(Enum): Added enum constructor support (IpAddress::v4(127, 0, 0, 1)).
feat(Array): Added array ref support (var[0]).

fix(SemanticAnalysis): Simplified processing of ChainableNodes.
fix(IfStatement): Reduce unnecessary cmp operations.
fix(FunctionParameter): Improved parsing.
fix(Enum): Simplified parsing logic for constructors.

chore: Updated Readme.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ file(GLOB_RECURSE LEXER_SOURCES LIST_DIRECTORIES true lexer/*.h lexer/*.cpp)
 file(GLOB_RECURSE PARSER_SOURCES LIST_DIRECTORIES true parser/*.h parser/*.cpp)
 file(GLOB_RECURSE CONTEXT_SOURCES LIST_DIRECTORIES true context/*.h context/*.cpp)
 file(GLOB_RECURSE SYMBOL_TABLE_SOURCES LIST_DIRECTORIES true symbolTable/*.h symbolTable/*.cpp)
+file(GLOB_RECURSE SCOPE_SOURCES LIST_DIRECTORIES true scope/*.h scope/*.cpp)
 # Pipelines
 file(GLOB_RECURSE PRE_ANALYSIS_SOURCES LIST_DIRECTORIES true preAnalysis/*.h preAnalysis/*.cpp)
 file(GLOB_RECURSE ANALYSIS_SOURCES LIST_DIRECTORIES true analysis/*.h analysis/*.cpp)
@@ -41,6 +42,7 @@ add_executable(
         ${PARSER_SOURCES}
         ${CONTEXT_SOURCES}
         ${SYMBOL_TABLE_SOURCES}
+        ${SCOPE_SOURCES}
         # Pipelines
         ${PRE_ANALYSIS_SOURCES}
         ${ANALYSIS_SOURCES}
